src/App.css
/* RESETS */
html{
	height:100%;
}
body{
	margin:0;
	padding:0;
	font-family: 'Barlow', sans-serif;
	background-color: rgb(50,60,143);
	background-image: url('https://www.transparenttextures.com/patterns/diagmonds-light.png');
	height:100%;
}

.social-render{
	width:1200px;
	height:630px;
	display:flex;
	align-items: center;
	justify-content: center;
	background-color: rgba(52, 167, 238, 0.7);
}

h1,h2,p{
	margin:0;
}

.app-container{
	width:100%;
	height:100%;
}


.header-gap{
	height:7em;
}

.card{
	background-color: rgba(52, 167, 238, 0.7);
	width:90%;
	display:flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	margin:0 auto;
	margin-top:1em;
	box-shadow: 3px 3px 15px rgba(0,0,0,0.5);
	border-radius:10px;
}

form{
	display:flex;
	width:100%;
	flex-direction: column;
	align-items: center;
}

button{
	font-size:1.4em;
	background:#eaf8ff;
	width:80%;
	height:2.5em;
	margin:1em 0;
	border-radius:15px;
	border:ridge 3px rgba(0,0,0,0.8);
	box-shadow: 3px 3px 15px rgba(0,0,0,0.4);
	transition: background-color 0.2s;
}

button:hover{
	background-color: #fcfeff;
	cursor:pointer;
}

.card-text{
	background:white;
	font-size:1.5em;
	text-align: center;
	width:80%;
	margin: 0.5em auto;
	padding:0.5em;
	border-radius:15px;
	box-shadow: 3px 3px 15px rgba(0,0,0,0.4);
}
.text-box{
	border:ridge 3px rgba(0,0,0,0.8);
	box-shadow: 3px 3px 15px rgba(0,0,0,0.4);
	width:80%;
	font-size:1.5em;
	padding:0.5em;
	height:1.5em;
	margin:0.5em 0;
}

.select-box{
	border:ridge 3px rgba(0,0,0,0.8);
	background:white;
	font-size:1.5em;
	text-align: center;
	width:80%;
	margin: 0.5em auto;
	padding:0.5em;
	border-radius:15px;
	box-shadow: 3px 3px 15px rgba(0,0,0,0.4);
	text-align-last: center;
}

/* Slide Container Styles */

.slidecontainer {
    width: 90%;
	margin: 0 auto;
	display:flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
}

/* The slider itself */
.slider {
    -webkit-appearance: none;
    appearance: none;
    width: 100%; /* Full-width */
    height: 50px; /* Specified height */
    background: white;
    outline: none;
    opacity: 0.7;
    -webkit-transition: .2s;
    transition: opacity .3s;
	border-radius: 25px;
	border:black solid 2px;
	box-shadow: inset 0px 0px 3px black;
}

/* Mouse-over effects */
.slider:hover {
    opacity: 1;
}

/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
.slider::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 50px;
    height: 50px;
    background: black;
    cursor: pointer; /* Cursor on hover */
	border-radius: 50%;
}

.slider::-moz-range-thumb {
    width: 25px;
    height: 25px;
    background: black;
    cursor: pointer; /* Cursor on hover */
}
.range{
	display:flex;
	justify-content: center;
	align-items: center;
	color:white;
	width:3em;
	font-size:1.5em;
	height:3em;
	border-radius:50%;
	background-color: black;
	margin:0.5em;
	order:-1;
	user-select: none;
}

.biz{
	background:purple;
}
.indiv{
	background:yellow;
}

.results{
	/* box-sizing: border-box; */
	display:flex;
	flex-direction: column;
	justify-content: flex-start;
	align-items: flex-start;
	margin:1em;
	border-radius:10px;
	box-shadow: 3px 3px 15px rgba(0,0,0,0.2);
	width:90%;
	background:black;
	border:6px solid black;
}
.results-numbers{
	font-size:2em;
}
.results-disclaimer{
	text-align: center;
	margin-bottom:0.5em;
}

.color-bar{
	display:flex;
	height:2em;
	align-items: center;
	justify-content: center;
	max-width:100%;
}
.color-bar-box{
	width:100%;
	background:black;
	border-bottom: 3px solid black;
}
.red{
	width:100%;
	background:#e04c2a;
}
.green{
	background:#5eb54e;
}
.color-bar-text{
	color:white;
}
.result-percentage{
	font-size:2em;
	width:1em;
	height:1em;
	margin-bottom:0 !important;
}
.row{
	display:flex;
	align-items: center;
	justify-content: space-around;
	margin:0 0.5em 0.5em 0.5em;
	width:100%;
	text-align: center;
}

.col{
	display:flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	width:100%;
}
.white{
	background:white;
}
.percentages{
	display:flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	margin:0 auto;
	padding-top:0.5em;
	padding-bottom:0.5em;
	border-bottom:3px solid black;
	width:100%;
	background:#f2f2ff;
	height:100%;
}
.percentage{
	color:white;
	padding:1em;
	background:black;
	border-radius: 50%;
	display:flex;
	align-items: center;
	justify-content: center;
	margin-bottom: 0.5em;
}

.results>h1{
	font-size: 2em;
}
.results-heading{
	font-size:2em;
	margin-top:0.5em;
	text-align: center;
}
.results-sub-heading{
	font-size:0.9em;
	margin-bottom:0.5em;
	text-align: center;
}

.results-total{
	font-size:2em;
}
.results-total-year{
	font-size:1.5em;
	margin:0 0 0.5em 0;
}

.header-box{
	background:white;
	border-top-left-radius: 10px;
	border-top-right-radius: 10px;
	width:100%;
	text-align: center;
	padding:0.5em 0;
	border-bottom:3px solid black;
}
.contributions-row{
	display:flex;
	width:100%;
	align-items:center;
	padding:0.2em 0;
	justify-content: space-between;
}
.contributions-row-heading{
	/* width:100%; */
	text-align: left;
	margin-left: 20px;
}
.contributions-row-result{
	/* width:100%; */
	text-align: right;
	margin-right: 20px;
}
.middle-box{
	box-sizing: border-box;
	padding:0.5em;
	width:100%;
	background:#f2f2ff;
	text-align: center;
	border-bottom:black 3px solid;
	border-top:black 3px solid;
}
.contributions-box{
	background: white;
	width:100%;
}
.total-box{
	width:100%;
	background: white;
	text-align: center;
	padding:0.5em 0;
}
.total-box>p:first-child{
	font-size: 3em;
}
.social-icons{
	display:flex;
	justify-content: space-around;
	align-items: center;
	width:100%;
	padding:10px 0;
	background:#f2f2ff;
	border-bottom-left-radius: 10px;
	border-bottom-right-radius: 10px;
	border-top:black 3px solid;
}

/* Media Queries */

@media screen and (min-width:350px) {
	button{
		width:60%;
		font-size:1.6em;
		height:3em;
	}
 }

 @media screen and (min-width:450px) {
	 .card{
		 width:70%;
	 }
 	button{
 		width:60%;
 		font-size:1.6em;
 		height:3em;
 	}
  }

@media screen and (min-width:600px) {
 	.card{
		width:70%;
	}
 }

 @media screen and (min-width:700px) {
  	.card{
 		width:500px;
 	}
  }

